[KMP][iOS] Try to make ios works. Failed.

--- a/iosApp/Podfile
+++ b/iosApp/Podfile
@@ -1,5 +1,5 @@
 target 'iosApp' do
   use_frameworks!
   platform :ios, '16.0'
-  pod 'common', :path => '../common'
+  pod 'umbrella', :path => '../common/umbrella'
 end
