--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,15 +2,16 @@
 agp = "8.7.3"
 koin = "4.1.0"
 ktor = "3.2.3"
+cicerone = "7.1"
 kotlin = "2.1.21"
 compose = "1.5.4"
 material3 = "1.3.2"
 sqlDelight = "2.1.0"
 dateTimeVersion = "0.6.2"
+androidxFragment = "1.8.0"
 coroutinesVersion = "1.10.2"
 androidx-activityCompose = "1.8.0"
 lifecycleViewmodelCompose = "2.9.1"
-cicerone = "7.1"
 
 [libraries]
 androidx-activity-compose = { module = "androidx.activity:activity-compose", version.ref = "androidx-activityCompose" }
@@ -37,6 +38,7 @@ kotlinx-datetime = { module = "org.jetbrains.kotlinx:kotlinx-datetime", version.
 ktor-client-android = { module = "io.ktor:ktor-client-android", version.ref = "ktor" }
 ktor-client-content-negotiation = { module = "io.ktor:ktor-client-content-negotiation", version.ref = "ktor" }
 cicerone = { module = "com.github.terrakok:cicerone", version.ref = "cicerone" }
+androidx-fragment = { module = "androidx.fragment:fragment-ktx", version.ref = "androidxFragment" }
 ktor-client-core = { module = "io.ktor:ktor-client-core", version.ref = "ktor" }
 ktor-client-darwin = { module = "io.ktor:ktor-client-darwin", version.ref = "ktor" }
 ktor-serialization-kotlinx-json = { module = "io.ktor:ktor-serialization-kotlinx-json", version.ref = "ktor" }
